--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "colabs-server-copy-deploy",
+  "name": "your-app-name",
   "version": "1.0.0",
-  "description": "",
+  "description": "Your app description",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "dotenv": "^8.2.0"
   }
 }
